# SPDX-License-Identifier: Apache-2.0

[package]
name = "bitbox-aes"
version = "0.1.0"
authors = ["Shift Crypto AG <support@bitbox.swiss>"]
edition = "2024"
license = "Apache-2.0"

[dependencies]
bitcoin = { workspace = true }
ctaes = { version = "0.1.0" }
zeroize = { workspace = true }
util = {path = "../util" }
