# SPDX-License-Identifier: Apache-2.0

[package]
name = "bitbox-board-stm32u5a9j-dk-sys"
version = "0.1.0"
edition = "2024"
authors = ["Shift Crypto AG <support@bitbox.swiss>"]
description = "Rust bindings for STM32U5A9J-DK board-specific C code in bitbox02-firmware"
license = "Apache-2.0"

[build-dependencies]
cc = { version = "1.2", features = ["parallel"] }
