# SPDX-License-Identifier: Apache-2.0

[package]
name = "bitbox-framed-serial-link"
version = "0.1.0"
authors = ["Shift Crypto AG <support@bitbox.swiss>"]
edition = "2024"
license = "Apache-2.0"
description = "Framed serial link helpers"

[dependencies]
crc = { workspace = true }
util = { path = "../util" }

[dev-dependencies]
hex_lit = { workspace = true }
