# SPDX-License-Identifier: Apache-2.0

[package]
name = "bitbox-platform-host"
version = "0.1.0"
authors = ["Shift Crypto AG <support@bitbox.swiss>"]
edition = "2024"
license = "Apache-2.0"

[dependencies]
bitbox-hal = { path = "../bitbox-hal" }
bitcoin = { workspace = true }
hex_lit = { workspace = true, features = ["rust_v_1_46"] }
zeroize = { workspace = true }

[features]
app-u2f = ["bitbox-hal/app-u2f"]

[dev-dependencies]
async_test = { path = "../async_test" }
util = { path = "../util", features = ["testing"] }
