# SPDX-License-Identifier: Apache-2.0

[package]
name = "bitbox-platform-stm32u5"
version = "0.1.0"
edition = "2024"
authors = ["Shift Crypto AG <support@bitbox.swiss>"]
description = "Idiomatic Rust bindings for the STM32U5 platform in bitbox02-firmware"
license = "Apache-2.0"

[dependencies]
bitbox-platform-stm32u5-sys = { path = "../bitbox-platform-stm32u5-sys" }
