# SPDX-License-Identifier: Apache-2.0

[package]
name = "bitbox-proto"
version = "0.1.0"
authors = ["Shift Crypto AG <support@bitbox.swiss>"]
edition = "2024"
description = "Committed protobuf Rust bindings for BitBox firmware"
license = "Apache-2.0"

[dependencies.prost]
# keep version in sync with tools/prost-build-proto/Cargo.toml and src/rust/bitbox02-rust/Cargo.toml.
version = "0.13.1"
default-features = false
features = ["derive"]
