# SPDX-License-Identifier: Apache-2.0

[package]
name = "bitbox-securechip"
version = "0.1.0"
authors = ["Shift Crypto AG <support@bitbox.swiss>"]
edition = "2024"
description = "Safe Rust bindings for securechip code in BitBox firmware"
license = "Apache-2.0"

[dependencies]
bitbox-securechip-sys = { path = "../bitbox-securechip-sys" }
critical-section = { workspace = true }
grounded = { workspace = true }
util = { path = "../util" }
zeroize = { workspace = true }

[features]
app-u2f = []
