# SPDX-License-Identifier: Apache-2.0

[package]
name = "bitbox-securechip"
version = "0.1.0"
authors = ["Shift Crypto AG <support@bitbox.swiss>"]
edition = "2024"
description = "Safe Rust bindings for securechip code in BitBox firmware"
license = "Apache-2.0"

[dependencies]
bitbox-hal = { path = "../bitbox-hal" }
bitbox-core-utils = { path = "../bitbox-core-utils" }
bitbox-securechip-sys = { path = "../bitbox-securechip-sys" }
critical-section = { workspace = true }
grounded = { workspace = true }
util = { path = "../util", features = ["sha2"] }
der = { version = "0.7.9", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["arithmetic", "ecdsa"] }
zeroize = { workspace = true }

[features]
app-u2f = []
factory-setup = []

[dev-dependencies]
async_test = { path = "../async_test" }
bitbox-platform-host = { path = "../bitbox-platform-host" }
hex_lit = { workspace = true, features = ["rust_v_1_46"] }
