# Copyright 2020 Shift Cryptosecurity AG
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "bitbox02-noise"
version = "0.1.0"
authors = ["Shift Crypto AG <support@shiftcrypto.ch>"]
edition = "2018"
description = "BitBox02 noise protocol primitives"
license = "Apache-2.0"

[dependencies]
zeroize = "1.6.0"

[dependencies.noise-protocol]
version = "0.1.3"
default-features = false
features = ["use_alloc"]

[dependencies.noise-rust-crypto]
version = "0.5.0"
default-features = false
features = ["use-sha2", "use-chacha20poly1305"]

[dependencies.x25519-dalek]
version = "1.1.0"
default-features = false
features = ["u32_backend"]
