# SPDX-License-Identifier: Apache-2.0

[package]
name = "bitbox02-noise"
version = "0.1.0"
authors = ["Shift Crypto AG <support@bitbox.swiss>"]
edition = "2024"
description = "BitBox02 noise protocol primitives"
license = "Apache-2.0"

[dependencies.noise-protocol]
version = "0.2.0"
default-features = false
features = ["use_alloc"]

[dependencies.noise-rust-crypto]
version = "0.6.2"
default-features = false
features = ["use-sha2", "use-chacha20poly1305"]

[dependencies.x25519-dalek]
version = "2.0.0"
default-features = false
features = ["static_secrets"]
